// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> should match the snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin-top: 4px;
}

.c4 {
  display: block;
  margin-bottom: 5px;
  color: #424242;
  margin: 0 0 0 12px;
}

.c1 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
  cursor: pointer;
  height: 100%;
  width: 100%;
}

.c1 + .c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 2px;
  box-sizing: border-box;
  color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  height: 24px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 24px;
  background-color: #ffffff;
  border: 2px solid #999999;
  font-size: 20px;
}

.c1:checked + .c2 {
  border-width: 0;
  background-color: #1250C4;
  color: #f2f2f2;
}

.c1:hover + .c2,
.c1:focus + .c2 {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c1[disabled] {
  cursor: not-allowed;
}

.c1[disabled] ~ .c3 {
  color: #999999;
}

.c1[disabled] + .c2 {
  border-color: #999999;
  background-color: #e0e0e0;
}

.c1[disabled]:checked + .c2 {
  background-color: #999999;
}

.c1[disabled]:hover + .c2 {
  box-shadow: 0px 0px 0px 0px rgba(66,66,66,0.2),0px 0px 0px 0px rgba(66,66,66,0.14),0px 0px 0px 0px rgba(66,66,66,0.12);
}

<div
  className=""
>
  <div
    className="c0"
  >
    <input
      checked={false}
      className="c1"
      disabled={false}
      id=""
      name="foo"
      onChange={[Function]}
      type="checkbox"
      value=""
    />
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root c2 "
      data-qtm-preloader="icon"
      focusable="false"
      role="presentation"
      style={
        Object {
          "color": "",
          "fontSize": 24,
          "maxWidth": 24,
        }
      }
      viewBox="0 0 24 24"
    >
      <path
        d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
      />
    </svg>
    <label
      className="c3 c4"
      htmlFor=""
    >
      
    </label>
  </div>
  
</div>
`;

exports[`<Checkbox /> should match the snapshot 2`] = `
.c5 {
  color: #ac001a;
  margin-top: 8px;
  cursor: text;
  display: block;
  line-height: normal;
  font-size: 14px;
  font-style: italic;
  font-weight: 600;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin-top: 4px;
}

.c4 {
  display: block;
  margin-bottom: 5px;
  color: #424242;
  margin: 0 0 0 12px;
}

.c6 + .c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 2px;
  box-sizing: border-box;
  color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  height: 24px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 24px;
  background-color: #ffffff;
  border: 2px solid #999999;
  font-size: 20px;
}

.c6:checked + .c2 {
  border-width: 0;
  background-color: #1250C4;
  color: #f2f2f2;
}

.c6:hover + .c2,
.c6:focus + .c2 {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c6[disabled] ~ .c3 {
  color: #999999;
}

.c6[disabled] + .c2 {
  border-color: #999999;
  background-color: #e0e0e0;
}

.c6[disabled]:checked + .c2 {
  background-color: #999999;
}

.c6[disabled]:hover + .c2 {
  box-shadow: 0px 0px 0px 0px rgba(66,66,66,0.2),0px 0px 0px 0px rgba(66,66,66,0.14),0px 0px 0px 0px rgba(66,66,66,0.12);
}

.c1 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
  cursor: pointer;
  height: 100%;
  width: 100%;
}

.c1 + .c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 2px;
  box-sizing: border-box;
  color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  height: 24px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 24px;
  background-color: #ffffff;
  border: 2px solid #999999;
  font-size: 20px;
}

.c1:checked + .c2 {
  border-width: 0;
  background-color: #1250C4;
  color: #f2f2f2;
}

.c1:hover + .c2,
.c1:focus + .c2 {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c1 + .c2 {
  border-color: #e91b0c;
}

.c1:checked + .c2 {
  background-color: #e91b0c;
}

.c1:hover + .c2,
.c1:focus + .c2 {
  border-color: #e91b0c;
  box-shadow: 0px 3px 5px -1px rgba(233,27,12,0.2),0px 5px 8px 0px rgba(233,27,12,0.14),0px 1px 14px 0px rgba(233,27,12,0.12);
}

.c1[disabled] {
  cursor: not-allowed;
}

.c1[disabled] ~ .c3 {
  color: #999999;
}

.c1[disabled] + .c2 {
  border-color: #999999;
  background-color: #e0e0e0;
}

.c1[disabled]:checked + .c2 {
  background-color: #999999;
}

.c1[disabled]:hover + .c2 {
  box-shadow: 0px 0px 0px 0px rgba(66,66,66,0.2),0px 0px 0px 0px rgba(66,66,66,0.14),0px 0px 0px 0px rgba(66,66,66,0.12);
}

<div
  className=""
>
  <div
    className="c0"
  >
    <input
      checked={false}
      className="c1"
      disabled={false}
      id=""
      name="foo"
      onChange={[Function]}
      type="checkbox"
      value=""
    />
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root c2 "
      data-qtm-preloader="icon"
      focusable="false"
      role="presentation"
      style={
        Object {
          "color": "",
          "fontSize": 24,
          "maxWidth": 24,
        }
      }
      viewBox="0 0 24 24"
    >
      <path
        d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
      />
    </svg>
    <label
      className="c3 c4"
      htmlFor=""
    >
      
    </label>
  </div>
  <span
    className="c5"
  >
    error message
  </span>
</div>
`;

exports[`<Checkbox /> should match the snapshot 3`] = `
.c5 {
  color: #ac001a;
  margin-top: 8px;
  cursor: text;
  display: block;
  line-height: normal;
  font-size: 14px;
  font-style: italic;
  font-weight: 600;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin-top: 4px;
}

.c4 {
  display: block;
  margin-bottom: 5px;
  color: #424242;
  margin: 0 0 0 12px;
}

.c6 + .c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 2px;
  box-sizing: border-box;
  color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  height: 24px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 24px;
  background-color: #ffffff;
  border: 2px solid #999999;
  font-size: 20px;
}

.c6:checked + .c2 {
  border-width: 0;
  background-color: #1250C4;
  color: #f2f2f2;
}

.c6:hover + .c2,
.c6:focus + .c2 {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c6[disabled] ~ .c3 {
  color: #999999;
}

.c6[disabled] + .c2 {
  border-color: #999999;
  background-color: #e0e0e0;
}

.c6[disabled]:checked + .c2 {
  background-color: #999999;
}

.c6[disabled]:hover + .c2 {
  box-shadow: 0px 0px 0px 0px rgba(66,66,66,0.2),0px 0px 0px 0px rgba(66,66,66,0.14),0px 0px 0px 0px rgba(66,66,66,0.12);
}

.c1 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
  cursor: pointer;
  height: 100%;
  width: 100%;
}

.c1 + .c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 2px;
  box-sizing: border-box;
  color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  height: 24px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 24px;
  background-color: #ffffff;
  border: 2px solid #999999;
  font-size: 20px;
}

.c1:checked + .c2 {
  border-width: 0;
  background-color: #1250C4;
  color: #f2f2f2;
}

.c1:hover + .c2,
.c1:focus + .c2 {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c1 + .c2 {
  border-color: #e91b0c;
}

.c1:checked + .c2 {
  background-color: #e91b0c;
}

.c1:hover + .c2,
.c1:focus + .c2 {
  border-color: #e91b0c;
  box-shadow: 0px 3px 5px -1px rgba(233,27,12,0.2),0px 5px 8px 0px rgba(233,27,12,0.14),0px 1px 14px 0px rgba(233,27,12,0.12);
}

.c1[disabled] {
  cursor: not-allowed;
}

.c1[disabled] ~ .c3 {
  color: #999999;
}

.c1[disabled] + .c2 {
  border-color: #999999;
  background-color: #e0e0e0;
}

.c1[disabled]:checked + .c2 {
  background-color: #999999;
}

.c1[disabled]:hover + .c2 {
  box-shadow: 0px 0px 0px 0px rgba(66,66,66,0.2),0px 0px 0px 0px rgba(66,66,66,0.14),0px 0px 0px 0px rgba(66,66,66,0.12);
}

<div
  className=""
>
  <div
    className="c0"
  >
    <input
      checked={true}
      className="c1"
      disabled={false}
      id=""
      name="foo"
      onChange={[Function]}
      type="checkbox"
      value=""
    />
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root c2 "
      data-qtm-preloader="icon"
      focusable="false"
      role="presentation"
      style={
        Object {
          "color": "",
          "fontSize": 24,
          "maxWidth": 24,
        }
      }
      viewBox="0 0 24 24"
    >
      <path
        d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
      />
    </svg>
    <label
      className="c3 c4"
      htmlFor=""
    >
      
    </label>
  </div>
  <span
    className="c5"
  >
    error message
  </span>
</div>
`;

exports[`<Checkbox /> should match the snapshot 4`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin-top: 4px;
}

.c4 {
  display: block;
  margin-bottom: 5px;
  color: #424242;
  margin: 0 0 0 12px;
}

.c1 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
  cursor: pointer;
  height: 100%;
  width: 100%;
}

.c1 + .c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 2px;
  box-sizing: border-box;
  color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  height: 24px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 24px;
  background-color: #ffffff;
  border: 2px solid #999999;
  font-size: 20px;
}

.c1:checked + .c2 {
  border-width: 0;
  background-color: #1250C4;
  color: #f2f2f2;
}

.c1:hover + .c2,
.c1:focus + .c2 {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c1[disabled] {
  cursor: not-allowed;
}

.c1[disabled] ~ .c3 {
  color: #999999;
}

.c1[disabled] + .c2 {
  border-color: #999999;
  background-color: #e0e0e0;
}

.c1[disabled]:checked + .c2 {
  background-color: #999999;
}

.c1[disabled]:hover + .c2 {
  box-shadow: 0px 0px 0px 0px rgba(66,66,66,0.2),0px 0px 0px 0px rgba(66,66,66,0.14),0px 0px 0px 0px rgba(66,66,66,0.12);
}

.c5 + .c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 2px;
  box-sizing: border-box;
  color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  height: 24px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 24px;
  background-color: #ffffff;
  border: 2px solid #999999;
  font-size: 20px;
}

.c5:checked + .c2 {
  border-width: 0;
  background-color: #1250C4;
  color: #f2f2f2;
}

.c5:hover + .c2,
.c5:focus + .c2 {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c5 + .c2 {
  border-color: #e91b0c;
}

.c5:checked + .c2 {
  background-color: #e91b0c;
}

.c5:hover + .c2,
.c5:focus + .c2 {
  border-color: #e91b0c;
  box-shadow: 0px 3px 5px -1px rgba(233,27,12,0.2),0px 5px 8px 0px rgba(233,27,12,0.14),0px 1px 14px 0px rgba(233,27,12,0.12);
}

.c5[disabled] ~ .c3 {
  color: #999999;
}

.c5[disabled] + .c2 {
  border-color: #999999;
  background-color: #e0e0e0;
}

.c5[disabled]:checked + .c2 {
  background-color: #999999;
}

.c5[disabled]:hover + .c2 {
  box-shadow: 0px 0px 0px 0px rgba(66,66,66,0.2),0px 0px 0px 0px rgba(66,66,66,0.14),0px 0px 0px 0px rgba(66,66,66,0.12);
}

<div
  className=""
>
  <div
    className="c0"
  >
    <input
      checked={true}
      className="c1"
      disabled={false}
      id=""
      name="foo"
      onChange={[Function]}
      type="checkbox"
      value=""
    />
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root c2 "
      data-qtm-preloader="icon"
      focusable="false"
      role="presentation"
      style={
        Object {
          "color": "",
          "fontSize": 24,
          "maxWidth": 24,
        }
      }
      viewBox="0 0 24 24"
    >
      <path
        d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
      />
    </svg>
    <label
      className="c3 c4"
      htmlFor=""
    >
      
    </label>
  </div>
  
</div>
`;

exports[`<Checkbox /> should match the snapshot 5`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin-top: 4px;
}

.c4 {
  display: block;
  margin-bottom: 5px;
  color: #424242;
  margin: 0 0 0 12px;
}

.c1 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
  cursor: pointer;
  height: 100%;
  width: 100%;
}

.c1 + .c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 2px;
  box-sizing: border-box;
  color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  height: 24px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 24px;
  background-color: #ffffff;
  border: 2px solid #999999;
  font-size: 20px;
}

.c1:checked + .c2 {
  border-width: 0;
  background-color: #1250C4;
  color: #f2f2f2;
}

.c1:hover + .c2,
.c1:focus + .c2 {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c1[disabled] {
  cursor: not-allowed;
}

.c1[disabled] ~ .c3 {
  color: #999999;
}

.c1[disabled] + .c2 {
  border-color: #999999;
  background-color: #e0e0e0;
}

.c1[disabled]:checked + .c2 {
  background-color: #999999;
}

.c1[disabled]:hover + .c2 {
  box-shadow: 0px 0px 0px 0px rgba(66,66,66,0.2),0px 0px 0px 0px rgba(66,66,66,0.14),0px 0px 0px 0px rgba(66,66,66,0.12);
}

.c5 + .c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 2px;
  box-sizing: border-box;
  color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  height: 24px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 24px;
  background-color: #ffffff;
  border: 2px solid #999999;
  font-size: 20px;
}

.c5:checked + .c2 {
  border-width: 0;
  background-color: #1250C4;
  color: #f2f2f2;
}

.c5:hover + .c2,
.c5:focus + .c2 {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c5 + .c2 {
  border-color: #e91b0c;
}

.c5:checked + .c2 {
  background-color: #e91b0c;
}

.c5:hover + .c2,
.c5:focus + .c2 {
  border-color: #e91b0c;
  box-shadow: 0px 3px 5px -1px rgba(233,27,12,0.2),0px 5px 8px 0px rgba(233,27,12,0.14),0px 1px 14px 0px rgba(233,27,12,0.12);
}

.c5[disabled] ~ .c3 {
  color: #999999;
}

.c5[disabled] + .c2 {
  border-color: #999999;
  background-color: #e0e0e0;
}

.c5[disabled]:checked + .c2 {
  background-color: #999999;
}

.c5[disabled]:hover + .c2 {
  box-shadow: 0px 0px 0px 0px rgba(66,66,66,0.2),0px 0px 0px 0px rgba(66,66,66,0.14),0px 0px 0px 0px rgba(66,66,66,0.12);
}

<div
  className=""
>
  <div
    className="c0"
  >
    <input
      checked={false}
      className="c1"
      disabled={true}
      id=""
      name="foo"
      onChange={[Function]}
      type="checkbox"
      value=""
    />
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root c2 "
      data-qtm-preloader="icon"
      focusable="false"
      role="presentation"
      style={
        Object {
          "color": "",
          "fontSize": 24,
          "maxWidth": 24,
        }
      }
      viewBox="0 0 24 24"
    >
      <path
        d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
      />
    </svg>
    <label
      className="c3 c4"
      htmlFor=""
    >
      
    </label>
  </div>
  
</div>
`;

exports[`<Checkbox /> should match the snapshot 6`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin-top: 4px;
}

.c4 {
  display: block;
  margin-bottom: 5px;
  color: #424242;
  margin: 0 0 0 12px;
}

.c1 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
  cursor: pointer;
  height: 100%;
  width: 100%;
}

.c1 + .c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 2px;
  box-sizing: border-box;
  color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  height: 24px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 24px;
  background-color: #ffffff;
  border: 2px solid #999999;
  font-size: 20px;
}

.c1:checked + .c2 {
  border-width: 0;
  background-color: #1250C4;
  color: #f2f2f2;
}

.c1:hover + .c2,
.c1:focus + .c2 {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c1[disabled] {
  cursor: not-allowed;
}

.c1[disabled] ~ .c3 {
  color: #999999;
}

.c1[disabled] + .c2 {
  border-color: #999999;
  background-color: #e0e0e0;
}

.c1[disabled]:checked + .c2 {
  background-color: #999999;
}

.c1[disabled]:hover + .c2 {
  box-shadow: 0px 0px 0px 0px rgba(66,66,66,0.2),0px 0px 0px 0px rgba(66,66,66,0.14),0px 0px 0px 0px rgba(66,66,66,0.12);
}

.c5 + .c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 2px;
  box-sizing: border-box;
  color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  height: 24px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 24px;
  background-color: #ffffff;
  border: 2px solid #999999;
  font-size: 20px;
}

.c5:checked + .c2 {
  border-width: 0;
  background-color: #1250C4;
  color: #f2f2f2;
}

.c5:hover + .c2,
.c5:focus + .c2 {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c5 + .c2 {
  border-color: #e91b0c;
}

.c5:checked + .c2 {
  background-color: #e91b0c;
}

.c5:hover + .c2,
.c5:focus + .c2 {
  border-color: #e91b0c;
  box-shadow: 0px 3px 5px -1px rgba(233,27,12,0.2),0px 5px 8px 0px rgba(233,27,12,0.14),0px 1px 14px 0px rgba(233,27,12,0.12);
}

.c5[disabled] ~ .c3 {
  color: #999999;
}

.c5[disabled] + .c2 {
  border-color: #999999;
  background-color: #e0e0e0;
}

.c5[disabled]:checked + .c2 {
  background-color: #999999;
}

.c5[disabled]:hover + .c2 {
  box-shadow: 0px 0px 0px 0px rgba(66,66,66,0.2),0px 0px 0px 0px rgba(66,66,66,0.14),0px 0px 0px 0px rgba(66,66,66,0.12);
}

<div
  className=""
>
  <div
    className="c0"
  >
    <input
      checked={false}
      className="c1"
      disabled={false}
      id=""
      name="foo"
      onChange={[Function]}
      type="checkbox"
      value=""
    />
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root c2 "
      data-qtm-preloader="icon"
      focusable="false"
      role="presentation"
      style={
        Object {
          "color": "",
          "fontSize": 24,
          "maxWidth": 24,
        }
      }
      viewBox="0 0 24 24"
    >
      <path
        d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
      />
    </svg>
    <label
      className="c3 c4"
      htmlFor=""
    >
      Some text
    </label>
  </div>
  
</div>
`;

exports[`<Checkbox /> should match the snapshot 7`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin-top: 4px;
}

.c4 {
  display: block;
  margin-bottom: 5px;
  color: #424242;
  margin: 0 0 0 12px;
}

.c1 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
  cursor: pointer;
  height: 100%;
  width: 100%;
}

.c1 + .c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 2px;
  box-sizing: border-box;
  color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  height: 24px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 24px;
  background-color: #ffffff;
  border: 2px solid #999999;
  font-size: 20px;
}

.c1:checked + .c2 {
  border-width: 0;
  background-color: #1250C4;
  color: #f2f2f2;
}

.c1:hover + .c2,
.c1:focus + .c2 {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c1[disabled] {
  cursor: not-allowed;
}

.c1[disabled] ~ .c3 {
  color: #999999;
}

.c1[disabled] + .c2 {
  border-color: #999999;
  background-color: #e0e0e0;
}

.c1[disabled]:checked + .c2 {
  background-color: #999999;
}

.c1[disabled]:hover + .c2 {
  box-shadow: 0px 0px 0px 0px rgba(66,66,66,0.2),0px 0px 0px 0px rgba(66,66,66,0.14),0px 0px 0px 0px rgba(66,66,66,0.12);
}

.c5 + .c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 2px;
  box-sizing: border-box;
  color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  height: 24px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 24px;
  background-color: #ffffff;
  border: 2px solid #999999;
  font-size: 20px;
}

.c5:checked + .c2 {
  border-width: 0;
  background-color: #1250C4;
  color: #f2f2f2;
}

.c5:hover + .c2,
.c5:focus + .c2 {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c5 + .c2 {
  border-color: #e91b0c;
}

.c5:checked + .c2 {
  background-color: #e91b0c;
}

.c5:hover + .c2,
.c5:focus + .c2 {
  border-color: #e91b0c;
  box-shadow: 0px 3px 5px -1px rgba(233,27,12,0.2),0px 5px 8px 0px rgba(233,27,12,0.14),0px 1px 14px 0px rgba(233,27,12,0.12);
}

.c5[disabled] ~ .c3 {
  color: #999999;
}

.c5[disabled] + .c2 {
  border-color: #999999;
  background-color: #e0e0e0;
}

.c5[disabled]:checked + .c2 {
  background-color: #999999;
}

.c5[disabled]:hover + .c2 {
  box-shadow: 0px 0px 0px 0px rgba(66,66,66,0.2),0px 0px 0px 0px rgba(66,66,66,0.14),0px 0px 0px 0px rgba(66,66,66,0.12);
}

<div
  className=""
>
  <div
    className="c0"
  >
    <input
      checked={true}
      className="c1"
      disabled={true}
      id=""
      name="foo"
      onChange={[Function]}
      type="checkbox"
      value=""
    />
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root c2 "
      data-qtm-preloader="icon"
      focusable="false"
      role="presentation"
      style={
        Object {
          "color": "",
          "fontSize": 24,
          "maxWidth": 24,
        }
      }
      viewBox="0 0 24 24"
    >
      <path
        d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
      />
    </svg>
    <label
      className="c3 c4"
      htmlFor=""
    >
      
    </label>
  </div>
  
</div>
`;
